--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+<form method="POST">
+ <label for="name">Name*</label>
+	<input type="text" id="#name" name="Name" value=""><br><br>
+<label for="Email">Email*</label>
+	<input type="email" id="email" name="Email" value=""><br><br>
+<label for="Gender">Gender*</label>
+	<input type="radio" id="gender" name="Gender" value="">
+	<label for"male">male</label>
+	<input type="radio" id="gender" name="Gender" value="">
+	<label for"male">female</label><br><br>
+<label for="Laptop">Laptop Brands</label>
+<select id="Laptop brand">
+		 <option value="Apple">Apple</option>
+         <option value="Asus">Asus</option>
+         <option value="Hp">Hp</option>
+</select><br><br>
+	<label for="Age" >Age*</label>
+	<input type="number" id="Age" name="Age" min="1" max="150" required>
+<br><br>
+	<label for ="DOB">DOB*</label>
+	<input type="date" id="DOB" name="DOB">
+<br><br>
+	<label for="password" >Password*</label>
+	<input type="password" id="password" name="password"><br><br>
+	<button>submit</button>
+</form>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
