--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
  <label for="name">Name*</label>
 	<input type="text" id="#name" name="Name" value=""><br><br>
 <label for="Email">Email*</label>
-	<input type="email" id="email" name="Email" value=""><br><br>
+	<input type="email" id="#email" name="Email" value=""><br><br>
 <label for="Gender">Gender*</label>
 	<input type="radio" id="gender" name="Gender" value="">
 	<label for"male">male</label>
@@ -26,13 +26,13 @@
          <option value="Hp">Hp</option>
 </select><br><br>
 	<label for="Age" >Age*</label>
-	<input type="number" id="Age" name="Age" min="1" max="150" required>
+	<input type="number" id="#age" name="Age" min="1" max="150" required>
 <br><br>
 	<label for ="DOB">DOB*</label>
-	<input type="date" id="DOB" name="DOB">
+	<input type="date" id="#dob" name="DOB">
 <br><br>
 	<label for="password" >Password*</label>
-	<input type="password" id="password" name="password"><br><br>
+	<input type="password" id="#password" name="password"><br><br>
 	<button>submit</button>
 </form>
 
