--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 <br><br>
 	<label for="password" >Password*</label>
 	<input type="password" id="#password" name="password"><br><br>
-	<button>submit</button>
+	<input type="button" name="submit" value="submit">
 </form>
 
 
