--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 	<input type="radio" id="gender" name="Gender" value="">
 	<label for"male">male</label>
 	<input type="radio" id="gender" name="Gender" value="">
-	<label for"male">female</label><br><br>
+	<label for"female">female</label><br><br>
 <label for="Laptop">Laptop Brands</label>
 <select id="Laptop brand">
 		 <option value="Apple">Apple</option>
