--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 
 <form method="POST">
  <label for="name">Name*</label>
-	<input type="text" id="#name" name="Name" value=""><br><br>
+	<input type="text" id="#name" name="#name" value=""><br><br>
 <label for="Email">Email*</label>
-	<input type="email" id="#email" name="Email" value=""><br><br>
+	<input type="email" id="#email" name="#email" value=""><br><br>
 <label for="Gender">Gender*</label>
-	<input type="radio" id="gender" name="Gender" value="">
+	<input type="radio" id="gender" name="Gender" value="" required>
 	<label for"male">male</label>
-	<input type="radio" id="gender" name="Gender" value="">
+	<input type="radio" id="gender" name="Gender" value="" required>
 	<label for"female">female</label><br><br>
 <label for="Laptop">Laptop Brands</label>
 <select id="Laptop brand">
@@ -26,13 +26,13 @@
          <option value="Hp">Hp</option>
 </select><br><br>
 	<label for="Age" >Age*</label>
-	<input type="number" id="#age" name="Age" min="1" max="150" required>
+	<input type="number" id="#age" name="#age" min="1" max="150" required>
 <br><br>
 	<label for ="DOB">DOB*</label>
 	<input type="date" id="#dob" name="DOB">
 <br><br>
 	<label for="password" >Password*</label>
-	<input type="password" id="#password" name="password"><br><br>
+	<input type="password" id="#password" name="#password"><br><br>
 	<button>submit</button>
 </form>
 
