--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 
 <form method="POST">
  <label for="name">Name*</label>
-	<input type="text" id="#name" name="#name" value=""><br><br>
+	<input type="text" id="#name" name="#name" value=""required><br><br>
 <label for="Email">Email*</label>
-	<input type="email" id="#email" name="#email" value=""><br><br>
+	<input type="email" id="#email" name="#email" value=""required><br><br>
 <label for="Gender">Gender*</label>
 	<input type="radio" id="gender" name="Gender" value="" required>
 	<label for"male">male</label>
@@ -29,10 +29,10 @@
 	<input type="number" id="#age" name="#age" min="1" max="150" required>
 <br><br>
 	<label for ="DOB">DOB*</label>
-	<input type="date" id="#dob" name="DOB">
+	<input type="date" id="#dob" name="DOB"required>
 <br><br>
 	<label for="password" >Password*</label>
-	<input type="password" id="#password" name="#password"><br><br>
+	<input type="password" id="#password" name="#password"required><br><br>
 	<button>submit</button>
 </form>
 
