--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 <label for="Email">Email*</label>
 	<input type="email" id="#email" name="#email" value=""required><br><br>
 <label for="Gender">Gender*</label>
-	<input type="radio" id="gender" name="Gender" value="" required>
+	<input type="radio" id="gender" name="gender" value="" required>
 	<label for"male">male</label>
-	<input type="radio" id="gender" name="Gender" value="" required>
+	<input type="radio" id="gender" name="gender" value="" required>
 	<label for"female">female</label><br><br>
 <label for="Laptop">Laptop Brands</label>
 <select id="Laptop brand">
